--- a/playbook.yml
+++ b/playbook.yml
@@ -1,12 +1,7 @@
----
-- name: Installation role users
+- name:
   hosts: all
   become: yes
-  vars:
-           db_user: essai1
-           db_password: essai1
-           db_name: essai1
   roles:
-          #   - apache
-          - postgresql
-            # - php
+   - postgresql
+
+
